# monarch

./: .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-cpu.yml  build.yml  ci.yml  doc_build.yml  nightly.yml  test-cpu.yml  test-cuda.yml  test.yml  wheels.yml
conda_ci/: cmd_runner.sh  re_prepare_source.sh
controller/: Cargo.toml
controller/src/: lib.rs
cuda-sys/: build.rs
docs/: CONTRIBUTING.md  Makefile  requirements.txt
examples/: README.rst  compute_world_size_actor.py  ddp.py  grpo_actor.py  hello_world_actor.py  ping_pong.py  slurm.py  slurm_allreduce.ipynb  slurm_ddp.ipynb  slurm_ddp.py  slurm_demo.ipynb  slurm_titan.py
hyperactor/: Cargo.toml
hyperactor_extension/: Cargo.toml
hyperactor_macros/: Cargo.toml
hyperactor_mesh/: Cargo.toml
hyperactor_mesh_macros/: Cargo.toml
hyperactor_multiprocess/: Cargo.toml
hyperactor_state/: Cargo.toml
hyperactor_telemetry/: Cargo.toml
meta/: README.md
monarch_conda/: Cargo.toml
monarch_extension/: Cargo.toml
monarch_hyperactor/: Cargo.toml
monarch_messages/: Cargo.toml
monarch_meta_extension/: Cargo.toml
monarch_rdma/: Cargo.toml
monarch_simulator/: Cargo.toml
monarch_tensor_worker/: Cargo.toml
monarch_types/: Cargo.toml
monarch_worker/: Cargo.toml  test_worker_main.py
nccl-sys/: Cargo.toml
ndslice/: Cargo.toml
rdmaxcel-sys/: Cargo.toml  build.rs
scripts/: push_nightly.sh
timed_test/: Cargo.toml
tools/: Cargo.toml  cli.py  commands.py  mesh_spec.py
torch-sys/: Cargo.toml  build.rs
(+360 files in other folders)
