[workspace]

members = [
    "controller",
    "hyper",
    "hyperactor",
    "hyperactor_macros",
    "hyperactor_multiprocess",
    "hyperactor_mesh",
    "hyperactor_mesh_macros",
    "hyperactor_telemetry",
    "ndslice",
    "monarch_extension",
    "monarch_worker",
    "nccl-sys",
    "torch-sys",
]
